py 大佬教学.txt
Python 3.6.3 |Anaconda, Inc.| (default, Oct 15 2017, 03:27:45) [MSC v.1900 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> print('hello world')
hello world
>>> print(1)
1
>>> print(2)
2
>>> print(2, 3)
2 3
>>> print(2, 5, 10)
2 5 10
>>> a = 2
>>> b = 'abc'
>>> c = 'de'
>>> b + c
'abcde'
>>> d = b + c
>>> print d
  File "<stdin>", line 1
    print d
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(d)?
>>> print(d)
abcde
>>> b * 100
'abcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabc'
>>> a = []
>>> type(a)
<class 'list'>
>>> a = [1, 2, 3, 4, 5, 6]
>>> a[1: 3]
[2, 3]
>>> a[1: 7]
[2, 3, 4, 5, 6]
>>> a[1: 70]
[2, 3, 4, 5, 6]
>>> a[-1]
6
>>> a[-2]
5
>>> a[-3]
4
>>> a[::2]
[1, 3, 5]
>>> a[1::2]
[2, 4, 6]
>>> a[1::3]
[2, 5]
>>> a[2::3]
[3, 6]
>>> a[::-1]
[6, 5, 4, 3, 2, 1]
>>> a[::-2]
[6, 4, 2]
>>> a[::-3]
[6, 3]
>>> a[2::-3]
[3]
>>> for i in range(100):
...     print i
  File "<stdin>", line 2
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(i)?
>>>
>>> for i in range(100):
...     print(i)
...
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
>>> # for (int i = 0; i < 100; i++)
...
>>> for i in xrange(0, 100)
  File "<stdin>", line 1
    for i in xrange(0, 100)
                          ^
SyntaxError: invalid syntax
>>> for i in xrange(0, 100):
...     print(i)
...
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'xrange' is not defined
>>> b = range(100)
>>> type(b)
<class 'range'>
>>> list(b)
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
>>> from itertools import combinations as c
>>> for t in c([1, 3, 6, 10, 15], 3):
...     print t
  File "<stdin>", line 2
    print t
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t)?
>>>
>>> for t in c([1, 3, 6, 10, 15], 3):
...     print(t)
...
(1, 3, 6)
(1, 3, 10)
(1, 3, 15)
(1, 6, 10)
(1, 6, 15)
(1, 10, 15)
(3, 6, 10)
(3, 6, 15)
(3, 10, 15)
(6, 10, 15)
>>> from itertools import permutations as p
>>> for t in p([1, 3, 6, 10, 15], 3):
...     print(t)
...
(1, 3, 6)
(1, 3, 10)
(1, 3, 15)
(1, 6, 3)
(1, 6, 10)
(1, 6, 15)
(1, 10, 3)
(1, 10, 6)
(1, 10, 15)
(1, 15, 3)
(1, 15, 6)
(1, 15, 10)
(3, 1, 6)
(3, 1, 10)
(3, 1, 15)
(3, 6, 1)
(3, 6, 10)
(3, 6, 15)
(3, 10, 1)
(3, 10, 6)
(3, 10, 15)
(3, 15, 1)
(3, 15, 6)
(3, 15, 10)
(6, 1, 3)
(6, 1, 10)
(6, 1, 15)
(6, 3, 1)
(6, 3, 10)
(6, 3, 15)
(6, 10, 1)
(6, 10, 3)
(6, 10, 15)
(6, 15, 1)
(6, 15, 3)
(6, 15, 10)
(10, 1, 3)
(10, 1, 6)
(10, 1, 15)
(10, 3, 1)
(10, 3, 6)
(10, 3, 15)
(10, 6, 1)
(10, 6, 3)
(10, 6, 15)
(10, 15, 1)
(10, 15, 3)
(10, 15, 6)
(15, 1, 3)
(15, 1, 6)
(15, 1, 10)
(15, 3, 1)
(15, 3, 6)
(15, 3, 10)
(15, 6, 1)
(15, 6, 3)
(15, 6, 10)
(15, 10, 1)
(15, 10, 3)
(15, 10, 6)
>>> x = 2
>>> if x == 2:
...     print('fuck')
...
fuck
>>> def a(x, y):
...     return x ** 2 + y ** 3, [x, y], float(x) / y
...
>>> d, e, f = a(6, 8)
>>> print d, e, f
  File "<stdin>", line 1
    print d, e, f
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(d, e, f)?
>>> print(d, e, f)
548 [6, 8] 0.75
>>> class student:
...     def __init__(self, name, age, sex, score):
...             self.name = name
...             self.age = age
...             self.sex = sex
...             self.score = score
...     def __str__(self):
...             print('Student: %s's score: %d' % (self.name, self.score))
  File "<stdin>", line 8
    print('Student: %s's score: %d' % (self.name, self.score))
                       ^
SyntaxError: invalid syntax
>>> class student:
...     def __init__(self, name, age, sex, score):
...             self.name = name
...             self.age = age
...             self.sex = sex
...             self.score = score
...     def __str__(self):
...             print('Student: %s\'s score: %d' % (self.name, self.score))
...
...
>>> s1 = student('alice', 18, 1, 99)
>>> s2 = student('bob', 81, 0, 66)9
  File "<stdin>", line 1
    s2 = student('bob', 81, 0, 66)9
                                  ^
SyntaxError: invalid syntax
>>> s2 = student('bob', 81, 0, 66)
>>> print [s1, s2]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'builtin_function_or_method' object is not subscriptable
>>> print([s1, s2])
[<__main__.student object at 0x000001EF7FD64BE0>, <__main__.student object at 0x000001EF7FD71128>]
>>> print(str(s1), str(s2))
Student: alice's score: 99
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: __str__ returned non-string (type NoneType)
>>> class student:
...     def __init__(self, name, age, sex, score):
...             self.name = name
...             self.age = age
...             self.sex = sex
...             self.score = score
...     def __str__(self):
...             return 'Student: %s\'s score: %d' % (self.name, self.score)
...
>>> print([s1, s2])
[<__main__.student object at 0x000001EF7FD64BE0>, <__main__.student object at 0x000001EF7FD71128>]
>>> print(str(s1), str(s2))
Student: alice's score: 99
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: __str__ returned non-string (type NoneType)
>>> a = {'A': 90, 'B': 80}
>>> a['A']
90
>>> a['B']
80
>>> a = {'A': 90, 'B': 80, 'Sunday': 7}
>>> a['Sunday']
7
>>> temp = raw_input()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'raw_input' is not defined
>>> temp = input()
ahwdih wdaiwhydiuwa eqweqwe
>>> print temp
  File "<stdin>", line 1
    print temp
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(temp)?
>>> print(temp)
ahwdih wdaiwhydiuwa eqweqwe
>>> print(temp.split())
['ahwdih', 'wdaiwhydiuwa', 'eqweqwe']
>>> temp = input()
1 4 6
>>> print(temp.split())
['1', '4', '6']
>>> print([int(o) for o in temp.split()])
[1, 4, 6]
>>>